--- a/NearbyWeather/Base.lproj/Main.storyboard
+++ b/NearbyWeather/Base.lproj/Main.storyboard
@@ -293,10 +293,10 @@
                                 <rect key="frame" x="-0.5" y="0.0" width="375.5" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgB-rb-ViZ" userLabel="ContentView">
-                                        <rect key="frame" x="-0.5" y="20" width="375" height="635"/>
+                                        <rect key="frame" x="-0.5" y="20" width="375" height="717"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="jHl-UF-vrq" userLabel="Container Stack View">
-                                                <rect key="frame" x="19.5" y="0.0" width="335" height="635"/>
+                                                <rect key="frame" x="19.5" y="0.0" width="335" height="717"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="W8x-69-vrw" userLabel="Header Stack View">
                                                         <rect key="frame" x="0.0" y="0.0" width="335" height="141"/>
@@ -480,8 +480,60 @@
                                                             </view>
                                                         </subviews>
                                                     </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="ye8-wX-UQr" userLabel="Wind Stack View">
+                                                        <rect key="frame" x="0.0" y="353" width="335" height="67"/>
+                                                        <subviews>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RUb-bU-EQQ">
+                                                                <rect key="frame" x="0.0" y="0.0" width="335" height="18"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind Speed:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z7N-pZ-NhR">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="143.5" height="18"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="63 km/h" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MqI-0r-Iyt">
+                                                                        <rect key="frame" x="143.5" y="0.0" width="191.5" height="18"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="z7N-pZ-NhR" firstAttribute="width" secondItem="MqI-0r-Iyt" secondAttribute="width" multiplier="0.75" id="kjN-ni-Pdm"/>
+                                                                </constraints>
+                                                            </stackView>
+                                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="247-z3-rmj">
+                                                                <rect key="frame" x="0.0" y="33" width="335" height="18"/>
+                                                                <subviews>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Wind Direction:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NvF-J4-NQe">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="143.5" height="18"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="190°" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vyt-Oe-xqR">
+                                                                        <rect key="frame" x="143.5" y="0.0" width="191.5" height="18"/>
+                                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <nil key="highlightedColor"/>
+                                                                    </label>
+                                                                </subviews>
+                                                                <constraints>
+                                                                    <constraint firstItem="NvF-J4-NQe" firstAttribute="width" secondItem="Vyt-Oe-xqR" secondAttribute="width" multiplier="0.75" id="tCK-ga-34h"/>
+                                                                </constraints>
+                                                            </stackView>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xYD-xb-CUF" userLabel="SeparatorLine">
+                                                                <rect key="frame" x="0.0" y="66" width="335" height="1"/>
+                                                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="height" constant="1" id="4zc-gf-bop"/>
+                                                                </constraints>
+                                                            </view>
+                                                        </subviews>
+                                                    </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="VPB-CS-fFB" userLabel="Location Stack View">
-                                                        <rect key="frame" x="0.0" y="353" width="335" height="282"/>
+                                                        <rect key="frame" x="0.0" y="435" width="335" height="282"/>
                                                         <subviews>
                                                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" zoomEnabled="NO" scrollEnabled="NO" rotateEnabled="NO" pitchEnabled="NO" showsBuildings="NO" showsCompass="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y6w-3a-yKO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="335" height="200"/>
@@ -578,6 +630,7 @@
                         <outlet property="daytimeStackView" destination="h99-6j-Z6I" id="FZh-1B-R6I"/>
                         <outlet property="distanceLabel" destination="WBx-dL-UPr" id="cFq-Wr-BZT"/>
                         <outlet property="distanceNoteLabel" destination="fGE-D0-wKz" id="V2u-1G-SUi"/>
+                        <outlet property="distanceStackView" destination="lz6-E9-GJl" id="ixA-u7-VH7"/>
                         <outlet property="humidityLabel" destination="0JP-S7-swS" id="iTW-GL-c6h"/>
                         <outlet property="humidityNoteLabel" destination="1Uh-or-qTy" id="oPQ-J5-v4O"/>
                         <outlet property="mapView" destination="Y6w-3a-yKO" id="XnC-mL-r7c"/>
@@ -588,10 +641,16 @@
                         <outlet property="sunsetLabel" destination="h5o-e2-OQL" id="Gdw-3k-9eu"/>
                         <outlet property="sunsetNoteLabel" destination="Mop-bG-iXt" id="BcA-5b-VUi"/>
                         <outlet property="temperatureLabel" destination="6NV-wT-cG5" id="H0E-cz-IY4"/>
+                        <outlet property="windDirectionLabel" destination="Vyt-Oe-xqR" id="Bf9-SP-0fF"/>
+                        <outlet property="windDirectionNoteLabel" destination="NvF-J4-NQe" id="yaj-kQ-0Or"/>
+                        <outlet property="windDirectionStackView" destination="247-z3-rmj" id="0K8-vu-pmm"/>
+                        <outlet property="windSpeedLabel" destination="MqI-0r-Iyt" id="m6S-Of-JJZ"/>
+                        <outlet property="windSpeedNoteLabel" destination="z7N-pZ-NhR" id="l1I-KA-bMT"/>
                         <outletCollection property="separatorLineHeightConstraints" destination="r1c-zH-h3s" collectionClass="NSMutableArray" id="K0N-q6-Hzi"/>
                         <outletCollection property="separatorLineHeightConstraints" destination="RTX-jf-iye" collectionClass="NSMutableArray" id="Rci-2U-zud"/>
                         <outletCollection property="separatorLineHeightConstraints" destination="ZED-9w-o03" collectionClass="NSMutableArray" id="hp2-cX-1SH"/>
                         <outletCollection property="separatorLineHeightConstraints" destination="h8W-hc-Axw" collectionClass="NSMutableArray" id="ERB-Oy-Y8z"/>
+                        <outletCollection property="separatorLineHeightConstraints" destination="4zc-gf-bop" collectionClass="NSMutableArray" id="giV-Xq-7Vj"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cGG-bn-MMI" userLabel="First Responder" sceneMemberID="firstResponder"/>
