--- a/NearbyWeather/Base.lproj/Main.storyboard
+++ b/NearbyWeather/Base.lproj/Main.storyboard
@@ -23,6 +23,31 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="Mgw-Bz-sT3">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                <view key="tableFooterView" contentMode="scaleToFill" id="99J-tm-PbI">
+                                    <rect key="frame" x="0.0" y="233.5" width="375" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNH-C8-mRJ">
+                                            <rect key="frame" x="136" y="10" width="103.5" height="10"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="WNH-C8-mRJ" secondAttribute="height" multiplier="207:20" id="WET-uV-HRn"/>
+                                                <constraint firstAttribute="height" constant="10" id="gdy-q3-Km1"/>
+                                            </constraints>
+                                            <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <state key="normal" image="OpenWeatherMapLogo"/>
+                                            <connections>
+                                                <action selector="openWeatherMapButtonPressed:" destination="c4g-oh-N8s" eventType="touchUpInside" id="blS-pC-MZd"/>
+                                                <action selector="openWeatherMapButtonPressed:" destination="Ri3-mc-4Zu" eventType="touchUpInside" id="t6W-Ay-sl0"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstItem="WNH-C8-mRJ" firstAttribute="top" secondItem="99J-tm-PbI" secondAttribute="top" constant="10" id="Np5-Sf-ZPL"/>
+                                        <constraint firstAttribute="bottom" secondItem="WNH-C8-mRJ" secondAttribute="bottom" constant="10" id="Xdx-3C-zAA"/>
+                                        <constraint firstItem="WNH-C8-mRJ" firstAttribute="centerX" secondItem="99J-tm-PbI" secondAttribute="centerX" id="wsb-Ed-lVj"/>
+                                    </constraints>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WeatherDataCell" rowHeight="100" id="Nkq-jB-OG2" userLabel="WeatherDataCell" customClass="WeatherDataCell" customModule="NearbyWeather" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="55.5" width="375" height="100"/>
@@ -293,10 +318,10 @@
                                 <rect key="frame" x="-0.5" y="0.0" width="375.5" height="667"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tgB-rb-ViZ" userLabel="ContentView">
-                                        <rect key="frame" x="-0.5" y="20" width="375" height="775"/>
+                                        <rect key="frame" x="-0.5" y="20" width="375" height="820"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="jHl-UF-vrq" userLabel="Container Stack View">
-                                                <rect key="frame" x="19.5" y="0.0" width="335" height="775"/>
+                                                <rect key="frame" x="19.5" y="0.0" width="335" height="820"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="W8x-69-vrw" userLabel="Header Stack View">
                                                         <rect key="frame" x="0.0" y="0.0" width="335" height="176.5"/>
@@ -565,6 +590,34 @@
                                                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
                                                                     <constraint firstAttribute="height" constant="1" id="RTX-jf-iye"/>
+                                                                </constraints>
+                                                            </view>
+                                                        </subviews>
+                                                    </stackView>
+                                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SQh-OC-LLt">
+                                                        <rect key="frame" x="0.0" y="790" width="335" height="30"/>
+                                                        <subviews>
+                                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hbh-PR-wlh">
+                                                                <rect key="frame" x="0.0" y="0.0" width="335" height="30"/>
+                                                                <subviews>
+                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eaq-xH-aDv">
+                                                                        <rect key="frame" x="116" y="10" width="103.5" height="10"/>
+                                                                        <constraints>
+                                                                            <constraint firstAttribute="width" secondItem="eaq-xH-aDv" secondAttribute="height" multiplier="207:20" id="loN-YB-pRW"/>
+                                                                            <constraint firstAttribute="height" constant="10" id="tIS-U7-Ntc"/>
+                                                                        </constraints>
+                                                                        <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                        <state key="normal" image="OpenWeatherMapLogo"/>
+                                                                        <connections>
+                                                                            <action selector="openWeatherMapButtonPressed:" destination="c4g-oh-N8s" eventType="touchUpInside" id="sfb-Po-gPy"/>
+                                                                        </connections>
+                                                                    </button>
+                                                                </subviews>
+                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <constraints>
+                                                                    <constraint firstAttribute="bottom" secondItem="eaq-xH-aDv" secondAttribute="bottom" constant="10" id="4TM-fL-QKV"/>
+                                                                    <constraint firstItem="eaq-xH-aDv" firstAttribute="centerX" secondItem="Hbh-PR-wlh" secondAttribute="centerX" id="Tdh-nY-v4i"/>
+                                                                    <constraint firstItem="eaq-xH-aDv" firstAttribute="top" secondItem="Hbh-PR-wlh" secondAttribute="top" constant="10" id="V6a-Ql-Jfl"/>
                                                                 </constraints>
                                                             </view>
                                                         </subviews>
@@ -1280,6 +1333,7 @@
         <image name="LocateFavoriteInactiveIcon" width="25" height="25"/>
         <image name="LocateUserInactiveIcon" width="25" height="25"/>
         <image name="Map" width="25" height="25"/>
+        <image name="OpenWeatherMapLogo" width="207" height="20"/>
         <image name="Reload" width="25" height="25"/>
         <image name="Settings" width="25" height="25"/>
         <image name="Sorting" width="25" height="25"/>
